--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,34 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        'Spotify Clone' {
+            storeFile file('D:\\AndroidStudioProjects\\android-spotify-demo\\app\\Spotify Clone.jks')
+            storePassword 'subhankar@123'
+            keyAlias 'key0'
+            keyPassword 'subhankar@123'
+        }
+    }
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.sodastudio.jun.spotify_demo"
+        applicationId "com.github.subho57.spotifyclone"
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        signingConfig signingConfigs.'Spotify Clone'
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.'Spotify Clone'
         }
         debug {
+        signingConfig signingConfigs.'Spotify Clone'
         }
     }
 }
