--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,9 @@ android {
         multiDexEnabled true
     }
     buildTypes {
+//        don't turn on minifyEnabled. It'll cause errors
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.'Spotify Clone'
             multiDexEnabled true
@@ -39,7 +40,7 @@ android {
             renderscriptDebuggable true
             debuggable true
             renderscriptOptimLevel 3
-            minifyEnabled true
+            minifyEnabled false
             multiDexEnabled true
         }
     }
@@ -61,7 +62,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
